--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gautam_saurav_ui_garden",
+  "name": "sharma_prachi_ui_garden",
   "private": true,
   "version": "0.0.0",
   "type": "module",
